Fix code sample overflow-x on smaller devices

--- a/src/css/utilities.css
+++ b/src/css/utilities.css
@@ -44,6 +44,7 @@
 
 .measure {
   max-width: var(--text-measure);
+  overflow-x: hidden;
 }
 
 /* u: Color */
